<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@id/apps"
            android:icon="@drawable/ic_like"
            android:title="@string/apps" />
        <item
            android:id="@id/friends"
            android:icon="@drawable/ic_people"
            android:title="@string/friends" />
        <item
            android:id="@id/profile"
            android:icon="@drawable/ic_avatar"
            android:title="@string/profile" />
        <item
            android:id="@id/more"
            android:icon="@drawable/ic_more"
            android:title="@string/more" />
    </group>
</menu>